# RAG_base

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  setup.sh
docker/: docker-compose.yaml  requirements.txt
src/: chain_test.py  load_dataset.py  load_pretrained_model.py
src/instruction_tuning/: eval_model.py  eval_model_finetuend.py  instruction_tuning.py  preprocess_dataset.py  save_model.py
src/rag/: rag.py  rag_finetuned.py
src/test/: chain_test.py  embed_test.py  llm_test.py
