[project]
name = "rag-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-huggingface>=0.1.2",
    "pre-commit>=4.0.1",
    "transformers[sentencepiece,torch]>=4.47.1",
]
