[project]
name = "rag-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.45.0",
    "datasets>=3.2.0",
    "faiss-cpu>=1.9.0.post1",
    "jq>=1.8.0",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-huggingface>=0.1.2",
    "peft>=0.14.0",
    "pre-commit>=4.0.1",
    "setuptools>=75.7.0",
    "tqdm>=4.67.1",
    "transformers[sentencepiece,torch]>=4.47.1",
    "trl>=0.13.0",
    "wheel>=0.45.1",
]
